--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Written by by Justin B. Kinney, Cold Spring Harbor Laboratory
 
 Last updated on 11 April 2014 
 
+License: MIT
+
 Reference: 
     Kinney, J.B. (2014) Rapid and deterministic estimation of probability densities using scale-free field theories.
     arXiv:1312.6661 [physics.data-an]
